add new aso and anim for fragments

--- a/app/src/main/res/navigation/main_graph.xml
+++ b/app/src/main/res/navigation/main_graph.xml
@@ -13,6 +13,10 @@
         <action
             android:id="@+id/action_splashFragment_to_listOfCarsFragment"
             app:destination="@id/listOfCarsFragment"
+            app:enterAnim="@anim/nav_default_enter_anim"
+            app:exitAnim="@anim/nav_default_exit_anim"
+            app:popEnterAnim="@anim/nav_default_pop_enter_anim"
+            app:popExitAnim="@anim/nav_default_pop_exit_anim"
             app:popUpTo="@id/main_graph"
             app:popUpToInclusive="true" />
     </fragment>
@@ -23,7 +27,11 @@
         tools:layout="@layout/fragment_list_of_cars">
         <action
             android:id="@+id/action_listOfCarsFragment_to_detailsCarFragment"
-            app:destination="@id/detailsCarFragment" />
+            app:destination="@id/detailsCarFragment"
+            app:enterAnim="@anim/nav_default_enter_anim"
+            app:exitAnim="@anim/nav_default_exit_anim"
+            app:popEnterAnim="@anim/nav_default_pop_enter_anim"
+            app:popExitAnim="@anim/nav_default_pop_exit_anim" />
     </fragment>
     <fragment
         android:id="@+id/detailsCarFragment"
