--- a/app/src/main/res/layout/fragment_list_of_cars.xml
+++ b/app/src/main/res/layout/fragment_list_of_cars.xml
@@ -27,9 +27,23 @@
             android:layout_marginVertical="@dimen/_10sdp"
             android:text="@string/prev_page"
             app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toStartOf="@id/next_page"
+            app:layout_constraintEnd_toStartOf="@id/number_page"
+            app:layout_constraintHorizontal_chainStyle="packed"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@id/recycler_view" />
+
+        <TextView
+            android:id="@+id/number_page"
+            style="@style/Text.Casual.24"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginHorizontal="@dimen/_16sdp"
+            android:layout_marginVertical="@dimen/_10sdp"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toStartOf="@id/next_page"
+            app:layout_constraintStart_toEndOf="@id/prev_page"
+            app:layout_constraintTop_toBottomOf="@id/recycler_view"
+            tools:text="5" />
 
         <TextView
             android:id="@+id/next_page"
@@ -40,15 +54,15 @@
             android:text="@string/next_page"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toEndOf="@id/prev_page"
+            app:layout_constraintStart_toEndOf="@id/number_page"
             app:layout_constraintTop_toBottomOf="@id/recycler_view" />
 
         <androidx.constraintlayout.widget.Group
             android:id="@+id/buttons_page_group"
-            android:visibility="gone"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            app:constraint_referenced_ids="next_page,prev_page" />
+            android:visibility="gone"
+            app:constraint_referenced_ids="next_page,prev_page,number_page" />
 
         <com.airbnb.lottie.LottieAnimationView
             android:id="@+id/loader"
