add new view for details screen

--- a/app/src/main/res/layout/fragment_details_car.xml
+++ b/app/src/main/res/layout/fragment_details_car.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
@@ -22,6 +23,39 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent">
 
+            <ImageView
+                android:id="@+id/user_avatar"
+                android:layout_width="@dimen/_50sdp"
+                android:layout_height="@dimen/_50sdp"
+                android:layout_marginTop="@dimen/_8sdp"
+                android:layout_marginEnd="@dimen/_8sdp"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintTop_toTopOf="parent"
+                tools:src="@drawable/picture_for_review" />
+
+            <TextView
+                android:id="@+id/user_name"
+                style="@style/Text.Casual.18"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginEnd="@dimen/_16sdp"
+                app:layout_constraintBottom_toBottomOf="@id/user_avatar"
+                app:layout_constraintEnd_toStartOf="@id/user_avatar"
+                app:layout_constraintTop_toTopOf="@id/user_avatar"
+                tools:text="Nick Bogatov" />
+
+            <TextView
+                android:id="@+id/head_title"
+                style="@style/Text.Casual.24"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="@dimen/_16sdp"
+                android:gravity="center"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@id/user_avatar"
+                tools:text="Пум пум пум" />
+
             <androidx.constraintlayout.widget.Group
                 android:id="@+id/group_dont_load"
                 android:layout_width="match_parent"
@@ -31,10 +65,10 @@
             <androidx.viewpager2.widget.ViewPager2
                 android:id="@+id/view_pager_container"
                 android:layout_width="match_parent"
-                android:layout_height="@dimen/_300sdp"
+                android:layout_height="@dimen/_250sdp"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toTopOf="parent" />
+                app:layout_constraintTop_toBottomOf="@id/head_title" />
 
             <com.tbuonomo.viewpagerdotsindicator.DotsIndicator
                 android:id="@+id/dots_indicator"
@@ -48,8 +82,6 @@
                 app:layout_constraintTop_toBottomOf="@id/view_pager_container"
                 app:progressMode="true"
                 app:selectedDotColor="@color/grey" />
-
-
 
 
         </androidx.constraintlayout.widget.ConstraintLayout>
