--- a/app/src/main/res/values/text_apperances.xml
+++ b/app/src/main/res/values/text_apperances.xml
@@ -9,6 +9,10 @@
         <item name="android:fontFamily">casual</item>
     </style>
 
+    <style name="Text.Casual.10">
+        <item name="android:textSize">@dimen/_10ssp</item>
+    </style>
+
     <style name="Text.Casual.14">
         <item name="android:textSize">@dimen/_14ssp</item>
     </style>
