--- a/app/src/main/res/layout/fragment_details_car.xml
+++ b/app/src/main/res/layout/fragment_details_car.xml
@@ -74,6 +74,7 @@
                 android:id="@+id/dots_indicator"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:layout_marginBottom="@dimen/_16sdp"
                 app:dotsColor="@color/grey"
                 app:dotsCornerRadius="@dimen/_8sdp"
                 app:dotsSize="@dimen/_12sdp"
@@ -88,6 +89,9 @@
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_marginHorizontal="@dimen/_8sdp"
+                android:layout_marginTop="@dimen/_16sdp"
+                android:paddingBottom="@dimen/_6sdp"
+                app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@id/dots_indicator"
