--- a/app/src/main/res/layout/item_post.xml
+++ b/app/src/main/res/layout/item_post.xml
@@ -9,7 +9,7 @@
     <androidx.cardview.widget.CardView
         android:id="@+id/card_view"
         android:layout_width="@dimen/_180sdp"
-        android:layout_height="@dimen/_250sdp"
+        android:layout_height="@dimen/_270sdp"
         android:background="@drawable/square_boarder"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -62,7 +62,9 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="@dimen/_8sdp"
         android:elevation="2dp"
+        app:layout_constraintVertical_bias="0.95"
         android:src="@drawable/baseline_favorite_24"
+        app:layout_constraintBottom_toBottomOf="@id/card_view"
         app:layout_constraintEnd_toStartOf="@id/favorite_count"
         app:layout_constraintHorizontal_chainStyle="packed"
         app:layout_constraintStart_toStartOf="parent"
